😜😼 Checkpoint ./index.html:3600935/2422 ./.glitch-assets:3600935/380 ./style.css:3600935/269 ./Troll.html:3600935/1319

--- a/Troll.html
+++ b/Troll.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
   <head>
     <title>Betthanos!</title>
     <meta charset="utf-8" />
@@ -7,15 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/style2.css" />
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
   </head>
-  <body>
-    <div>
-       <img class = "Betthanos" src = "https://cdn.glitch.com/56cf099d-e0e8-48ac-8400-14cd70ecef3c%2Fbttanos.webp?v=1573145255507"> 
-       <a class="HAHA" href="./Troll">Clicca QUI MOLTO IMPORTANTE</a>
-    </div>
-  </body>
 </html>
