🐟⛷ Checkpoint ./style.css:3600935/1137 ./index.html:3600935/14 ./Troll.html:3600935/141 ./.glitch-assets:3600935/364

--- a/Troll.html
+++ b/Troll.html
@@ -12,4 +12,7 @@
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
   </head>
+  <body>
+    <img src="https://cdn.glitch.com/56cf099d-e0e8-48ac-8400-14cd70ecef3c%2FPng.png?v=1573146047343">
+  </body>
 </html>
