--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div>
        <img class = "Betthanos" src = "https://cdn.glitch.com/56cf099d-e0e8-48ac-8400-14cd70ecef3c%2Fbttanos.webp?v=1573145255507"> 
-       <a class="HAHA" href="./Troll">Clicca QUI MOLTO IMPORTANTE</a>
+       <a id="HAHA" href="./Troll.html">Clicca QUI MOLTO IMPORTANTE</a>
     </div>
   </body>
 </html>
