--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <div>
        <img class = "Betthanos" src = "https://cdn.glitch.com/56cf099d-e0e8-48ac-8400-14cd70ecef3c%2Fbttanos.webp?v=1573145255507"> 
        <a id="HAHA" href="./Troll.html">Clicca QUI MOLTO IMPORTANTE</a>
+	   <a href="./Untitled.jpg" download>
+  Scarica
+  </a>
     </div>
   </body>
 </html>
