--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="./style.css" />
-
+	<link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet">
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
   </head>
@@ -16,7 +16,7 @@
     <div>
        <img class = "Betthanos" src = "https://cdn.glitch.com/56cf099d-e0e8-48ac-8400-14cd70ecef3c%2Fbttanos.webp?v=1573145255507"> 
        <a id="HAHA" href="./Troll.html">Clicca QUI MOLTO IMPORTANTE</a>
-	   <a href="./Untitled.jpg" download>
+	   <a id="download" href="./Betthanos.jpg" download>
   Scarica
   </a>
     </div>
